Bug fixes: class loaded missmatch; pstmt setter index out of bound; select discrete criterias check. Added convenient `search` overloads